kanc/src/tests/sample_code/should_fail/multi_file/bind/leaky_let_value/src/mod.ph
pub type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let priv_S = Nat.S;

pub let(*) plus = fun plus(-a: Nat, b: Nat): Nat {
    match a {
        .O => b,
        .S(a') => priv_S(plus(a', b)),
    }
};
